<resources>
    <string name="app_name">Main_Application</string>
    <string name="title_activity_login_main">LoginMain</string>
    <!-- Strings used for fragments for navigation -->
    <string name="enter_name">Enter Name</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">login</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="transport">Transport</string>
    <string name="login_text">LOGIN</string>
    <string name="title_activity_ledger">Ledger</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="appointment_summary">Appointment Summary</string>
    <string name="allergies">Allergies</string>
    <string name="prescription">Prescription</string>
    <string name="billing">Billing</string>
    <string name="appointments">Appointments</string>
    <string name="button_6">Button 6</string>
</resources>