<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/get_name"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:focusable="true"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#AB47BC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337" />

    <EditText
        android:id="@+id/get_password"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_below="@+id/get_name"
        android:layout_alignEnd="@+id/get_name"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColorHint="#D81B60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_name"
        app:layout_constraintVertical_bias="0.112" />

    <Button
        android:id="@+id/submit_login"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:onClick="LoginHandler"
        android:layout_marginStart="16dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_password"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/submit_cancel"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="240dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"

        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toEndOf="@+id/submit_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/login_text"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/get_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337" />

</androidx.constraintlayout.widget.ConstraintLayout>